{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 143,
  "lineage": "bed548c0-3910-dbfe-5e75-daf8ad28ce43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wazuh-client-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e41b3179e88042d",
            "associate_with_private_ip": "10.0.0.51",
            "association_id": "eipassoc-08bf9719d1478e324",
            "domain": "vpc",
            "id": "eipalloc-02e41b3179e88042d",
            "instance": "i-0b05e05a954af48f1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05f5e75293539b25b",
            "private_dns": "ip-10-0-0-51.ec2.internal",
            "private_ip": "10.0.0.51",
            "public_dns": "ec2-54-234-33-94.compute-1.amazonaws.com",
            "public_ip": "54.234.33.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wazuh-client-eip"
            },
            "tags_all": {
              "Name": "wazuh-client-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-client-nic",
            "aws_security_group.allow-home-traffic",
            "aws_subnet.wazuh_subnet",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wazuh-server-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0367c463370eecad4",
            "associate_with_private_ip": "10.0.0.50",
            "association_id": "eipassoc-010880f4161cb2bb9",
            "domain": "vpc",
            "id": "eipalloc-0367c463370eecad4",
            "instance": "i-0725dd0c0388ea927",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cb09f93407bca1ef",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-50-17-10-87.compute-1.amazonaws.com",
            "public_ip": "50.17.10.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wazuh-server-eip"
            },
            "tags_all": {
              "Name": "wazuh-server-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow-home-traffic",
            "aws_subnet.wazuh_subnet",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wazuh_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:339712846171:instance/i-0b05e05a954af48f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "wazuh_vol_client1"
                },
                "tags_all": {
                  "Name": "wazuh_vol_client1"
                },
                "throughput": 0,
                "volume_id": "vol-09c4e6c629fc1428e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b05e05a954af48f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "easter-terraform-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05f5e75293539b25b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f5e75293539b25b",
            "private_dns": "ip-10-0-0-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.51",
            "public_ip": "54.234.33.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03907be4c7ada78ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa647cbbba9274c1",
            "tags": {
              "Name": "wazuh_client"
            },
            "tags_all": {
              "Name": "wazuh_client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04074623293c5d76d"
            ]
          },
          "dependencies": [
            "aws_eip.wazuh-client-eip",
            "aws_internet_gateway.gw",
            "aws_network_interface.web-client-nic",
            "aws_security_group.allow-home-traffic",
            "aws_subnet.wazuh_subnet",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wazuh_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:339712846171:instance/i-0725dd0c0388ea927",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "wazuh_vol_server1"
                },
                "tags_all": {
                  "Name": "wazuh_vol_server1"
                },
                "throughput": 0,
                "volume_id": "vol-07c810e9c13598f25",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0725dd0c0388ea927",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "easter-terraform-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0cb09f93407bca1ef"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cb09f93407bca1ef",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.50",
            "public_ip": "50.17.10.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007eeeba5edbe62de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa647cbbba9274c1",
            "tags": {
              "Name": "wazuh_server\u0026index"
            },
            "tags_all": {
              "Name": "wazuh_server\u0026index"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04074623293c5d76d"
            ]
          },
          "dependencies": [
            "aws_eip.wazuh-server-eip",
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow-home-traffic",
            "aws_subnet.wazuh_subnet",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712846171:internet-gateway/igw-0e07baa953e6539dc",
            "id": "igw-0e07baa953e6539dc",
            "owner_id": "339712846171",
            "tags": {
              "Name": "wazuh_gateway"
            },
            "tags_all": {
              "Name": "wazuh_gateway"
            },
            "vpc_id": "vpc-01183e286868a8a07"
          },
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-client-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712846171:network-interface/eni-05f5e75293539b25b",
            "attachment": [
              {
                "attachment_id": "eni-attach-01544a1db825947b3",
                "device_index": 0,
                "instance": "i-0b05e05a954af48f1"
              }
            ],
            "id": "eni-05f5e75293539b25b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:dc:42:11:d4:5f",
            "owner_id": "339712846171",
            "private_ip": "10.0.0.51",
            "private_ip_list": [
              "10.0.0.51"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.51"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04074623293c5d76d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa647cbbba9274c1"
          },
          "dependencies": [
            "aws_security_group.allow-home-traffic",
            "aws_subnet.wazuh_subnet",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712846171:network-interface/eni-0cb09f93407bca1ef",
            "attachment": [
              {
                "attachment_id": "eni-attach-013f4cdf38f600ede",
                "device_index": 0,
                "instance": "i-0725dd0c0388ea927"
              }
            ],
            "id": "eni-0cb09f93407bca1ef",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:7d:b3:65:b1:cd",
            "owner_id": "339712846171",
            "private_ip": "10.0.0.50",
            "private_ip_list": [
              "10.0.0.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04074623293c5d76d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa647cbbba9274c1"
          },
          "dependencies": [
            "aws_security_group.allow-home-traffic",
            "aws_subnet.wazuh_subnet",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wazuh-routing-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712846171:route-table/rtb-06c32232e89533988",
            "id": "rtb-06c32232e89533988",
            "owner_id": "339712846171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e07baa953e6539dc",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e07baa953e6539dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wazuh-routing-table"
            },
            "tags_all": {
              "Name": "wazuh-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01183e286868a8a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wazuh-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009e7e1e69260c5b2",
            "route_table_id": "rtb-06c32232e89533988",
            "subnet_id": "subnet-0aa647cbbba9274c1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.wazuh-routing-table",
            "aws_subnet.wazuh_subnet",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-home-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712846171:security-group/sg-04074623293c5d76d",
            "description": "my wazuh security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04074623293c5d76d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16",
                  "172.16.0.0/12",
                  "10.0.0.0/8"
                ],
                "description": "RFC 1918",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "allow-home-traffic",
            "name_prefix": "",
            "owner_id": "339712846171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wazuh_secgrp"
            },
            "tags_all": {
              "Name": "wazuh_secgrp"
            },
            "timeouts": null,
            "vpc_id": "vpc-01183e286868a8a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wazuh_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712846171:subnet/subnet-0aa647cbbba9274c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa647cbbba9274c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712846171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wazuh_subnet"
            },
            "tags_all": {
              "Name": "wazuh_subnet"
            },
            "vpc_id": "vpc-01183e286868a8a07"
          },
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wazuh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712846171:vpc/vpc-01183e286868a8a07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a610e6f3db5499d8",
            "default_route_table_id": "rtb-0cca5cc4c37f1d302",
            "default_security_group_id": "sg-0fa0921843dee0da6",
            "dhcp_options_id": "dopt-09f8d45531dd35f89",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01183e286868a8a07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cca5cc4c37f1d302",
            "owner_id": "339712846171",
            "tags": {
              "Name": "wazuh_vpc"
            },
            "tags_all": {
              "Name": "wazuh_vpc"
            }
          }
        }
      ]
    }
  ]
}